--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,11 @@ server.port=${PORT:8080}
 vaadin.compatibilityMode = false
 logging.level.org.atmosphere = warn
 
-# To improve the performance during development. 
+# To improve the performance during development.
 # For more information https://vaadin.com/docs/v14/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 # vaadin.whitelisted-packages= org/vaadin/example
 vaadin.pnpm.enable=false
+
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
